Fix FindBugs warnings in Parser Test.